# rs.template

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  init.sh  post-create.sh
.github/: .gitignore  PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  test.yml
scripts/: .gitignore  test.sh
src/: lib.rs  main.rs
tests/: integration.rs
